<resources>

<!--Main screen-->
    <string name="app_name">AndroidPractice</string>
    <string name="startBtnText">Начать</string>

<!--Home screen-->
    <string name="openCalcBtn">Калькулятор</string>
    <string name="openListBtn">Список</string>
    <string name="openWeatherBtn">Погода</string>

<!--Calc screen-->
    <string name="calculator_title">Калькулятор</string>
    <string name="clear">C</string>

<!--List screen-->
    <string name="screen_list_title">Список автомобилей</string>
    <string name="back">Назад</string>
<!--Weather screen-->
    <string name="weather_title">Погода в Москве</string>
    <string name="_0">0</string>
    <string name="_Open">(</string>
    <string name="_Close">)</string>
    <string name="_Div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_Mult">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_Minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_Plus">+</string>
    <string name="_Dot">.</string>
    <string name="_Eq">=</string>
    <string name="start">Старт</string>
    <string name="calculator">Калькулятор</string>
    <string name="home">В Меню</string>


</resources>