<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/calculatorToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/calculator_title"/>

    <TextView
        android:id="@+id/textExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:gravity="end"
        android:padding="@dimen/padding_large"
        android:text=""/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_xlarge"
        android:gravity="end"
        android:padding="@dimen/padding_large"
        android:text="@string/_0"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="@dimen/padding_medium">

        <Button
            android:id="@+id/buttonClear"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/buttonOpen"
            android:text="@string/_Open"/>

        <Button
            android:id="@+id/buttonClose"
            android:text="@string/_Close"/>

        <Button
            android:id="@+id/buttonDivide"
            android:text="@string/_Div"/>

        <Button
            android:id="@+id/button7"
            android:text="@string/_7"/>

        <Button
            android:id="@+id/button8"
            android:text="@string/_8"/>

        <Button
            android:id="@+id/button9"
            android:text="@string/_9"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:text="@string/_Mult"/>

        <Button
            android:id="@+id/button4"
            android:text="@string/_4"/>

        <Button
            android:id="@+id/button5"
            android:text="@string/_5"/>

        <Button
            android:id="@+id/button6"
            android:text="@string/_6"/>

        <Button
            android:id="@+id/buttonMinus"
            android:text="@string/_Minus"/>

        <Button
            android:id="@+id/button1"
            android:text="@string/_1"/>

        <Button
            android:id="@+id/button2"
            android:text="@string/_2"/>

        <Button
            android:id="@+id/button3"
            android:text="@string/_3"/>

        <Button
            android:id="@+id/buttonPlus"
            android:text="@string/_Plus"/>

        <Button
            android:id="@+id/button0"
            android:text="@string/_0"/>

        <Button
            android:id="@+id/buttonDot"
            android:text="@string/_Dot"/>

        <Button
            android:id="@+id/buttonEquals"
            android:text="@string/_Eq"
            android:layout_columnSpan="2"/>

    </GridLayout>

</LinearLayout>